[package]
name = "filesafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.20.0"
chrono = "0.4.23"
clap = "4.0.32"
rand = "0.8.5"
rpassword = "7.2.0"
rsa = "0.7.2"
rust-ini = "0.18.0"
zeroize = "1.5.7"
